# pysrim-docker

./: LICENSE  README.md  pyproject.toml
pysrim_docker/: __init__.py  executor.py  sr.py  trim.py
srim/docker/: executor.py  sr.py  trim.py
